Fix blog card overflow, add Vercel deployment, filter empty posts
- Fixed CSS @import order warning
- Added overflow handling for blog card descriptions
- Filter out empty blog posts from homepage
- Added Vercel adapter for deployment
- Updated site URL to icode4freedom.com
- Added vercel.json config

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 @font-face {
   font-family: 'Mechanismo';
   src: url(MechanismoRegular-p7ywa.otf);
@@ -7,8 +9,6 @@
   font-family: 'Fixedsys';
   src: url(FSEX300.ttf);
 }
-
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 :root {
   /* Colors */
@@ -136,7 +136,8 @@ footer {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  height: 8rem;
+  min-height: 8rem;
+  height: auto;
 
   margin-bottom: 1.5rem;
   list-style: none;
@@ -144,6 +145,15 @@ footer {
   border-style: solid;
   border-width: 0.25rem;
   border-radius: 0.25rem;
+  overflow: hidden;
+}
+
+.blog-list li .blog-info p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .blog-list{
